--- a/tuwaiq-academy/tuwaiq-academy/Base.lproj/Main.storyboard
+++ b/tuwaiq-academy/tuwaiq-academy/Base.lproj/Main.storyboard
@@ -147,6 +147,21 @@
             <point key="canvasLocation" x="-1079" y="-1639"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="1HF-mP-KSt">
+            <objects>
+                <viewController id="sKb-5N-52P" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HT1-oA-MIv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="wkD-fX-TeK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1P3-gA-BwE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-342" y="-1628"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="1KU-if-du4">
             <objects>
                 <viewController id="Nia-eS-B8V" sceneMemberID="viewController">
@@ -187,6 +202,12 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWj-fQ-MY8">
+                                <rect key="frame" x="47" y="426" width="268" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Sign in "/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="huW-3q-i3y"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
