--- a/tuwaiq-academy/tuwaiq-academy/View/Base.lproj/Main.storyboard
+++ b/tuwaiq-academy/tuwaiq-academy/View/Base.lproj/Main.storyboard
@@ -362,7 +362,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LXm-ya-qAw">
-                                <rect key="frame" x="67" y="44" width="240" height="128"/>
+                                <rect key="frame" x="119" y="44" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5vJ-J3-PQb">
@@ -396,6 +396,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0my-EP-ryh">
+                                <rect key="frame" x="13" y="54" width="89" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ST3-mZ-wGU">
+                                <rect key="frame" x="16" y="118" width="69" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Sxf-ao-2Wf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -405,11 +416,13 @@
                         <outlet property="postDescriptionLabel" destination="5vJ-J3-PQb" id="C7L-fk-Lql"/>
                         <outlet property="postImageView" destination="LXm-ya-qAw" id="ey8-je-eCM"/>
                         <outlet property="postTitleLabel" destination="3rl-Ng-xv0" id="XrD-xS-YTZ"/>
+                        <outlet property="userImageView" destination="0my-EP-ryh" id="aZs-oW-aAG"/>
+                        <outlet property="usernameView" destination="ST3-mZ-wGU" id="5cl-Cf-KeE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jfr-DG-8TB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-426" y="194"/>
+            <point key="canvasLocation" x="-426.39999999999998" y="193.85307346326837"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="1KU-if-du4">
